tests/ui/traits/object/issue-44454-2.stderr
error[E0521]: borrowed data escapes outside of function
  --> $DIR/issue-44454-2.rs:16:5
   |
LL | fn extend_lt<'a>(x: &'a str) -> Box<dyn AsRef<str> + 'static> {
   |              --  - `x` is a reference that is only valid in the function body
   |              |
   |              lifetime `'a` defined here
LL |     type DynTrait = dyn for<'a> Trait<&'a str, Assoc = &'a str>;
LL |     hr::<DynTrait, _>(x)
   |     ^^^^^^^^^^^^^^^^^^^^
   |     |
   |     `x` escapes the function body here
   |     argument requires that `'a` must outlive `'static`

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0521`.
